[gd_scene load_steps=2 format=3 uid="uid://cp7bjwpvhis8c"]

[ext_resource type="Script" uid="uid://d0pup0b237bma" path="res://Scripts/enemy.gd" id="1_1f0kj"]

[node name="Enemy" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_1f0kj")
SPEED = null
HP = null
DAMAGE = null

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="FiringPositions" type="Node2D" parent="."]

[node name="LeftFiringPosition" type="Node2D" parent="FiringPositions"]

[node name="RightFiringPosition" type="Node2D" parent="FiringPositions"]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
